--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,13 @@ version: 1.2.7
 homepage: https://github.com/xuelongqy/flutter_easyrefresh
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <4.0.0"
-  flutter: ">=0.1.4 <2.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bloc: 7.1.0
-  flutter_bloc: 7.1.0
+  bloc: 8.1.4
+  flutter_bloc: 8.1.5
   equatable: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
